First and second slide

--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
 	<link rel="stylesheet" href="lib/css/zenburn.css">
 
 	<link rel="stylesheet" href="css/main.css">
-
 </head>
 <body>
 	<div class="reveal">
 		<div class="slides">
 			<section class="hello">
 				<section>
-					<h4>Let's talk about FP</h4>
+					<p class="backSymb">λ</p>
+					<h4>Let's talk about</h4>
+					<h2>Functional Programming</h2>
+				</section>
+			</section>
+			<section>
+				<section class="qr">
+					<img src="img/qr-code-slides.png" alt="" width="500">
+					<p>https://jestersunborn.github.io/functional-programming-js-slides</p>
 				</section>
 			</section>
 		</div>
