--- a/index.html
+++ b/index.html
@@ -27,7 +27,78 @@
 			<section>
 				<section class="qr">
 					<img src="img/qr-code-slides.png" alt="" width="500">
-					<p>https://jestersunborn.github.io/functional-programming-js-slides</p>
+					<a href="https://jestersunborn.github.io/functional-programming-js-slides">jestersunborn.github.io/functional-programming-js-slides</a>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h3>Історія</h3>
+				</section>
+				<section>
+					<img src="img/alonzo.jpg" alt="" width="500">
+					<h4>Алонзо Черч</h4>
+					<p>(1903 - 1995)</p>
+				</section>
+				<section>
+					<h3>Лямбда-числення</h3>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h3>Основні принципи ФП</h3>
+				</section>
+				<section>
+					<h3>Чисті функції</h3>
+					<p>Pure Functions</p>
+				</section>
+				<section>
+					<h3>Функції першого классу та вищого порядку</h3>
+					<p>First-class functions and higher-order functions</p>
+				</section>
+				<section>
+					<h3>Незмінність</h3>
+					<p>Imutable</p>
+				</section>
+				<section>
+					<h3>Каррінг</h3>
+					<p>Currying</p>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2>переваги фп</h2>
+				</section>
+				<section class="quote">
+					<h4>Улучшенное самочувствие. Повышенная самооценка. Иногда раздражительность</h4>
+					<p>(c) Alexey Raspopov, BeerJS Kyiv</p>
+				</section>
+				<section>
+					<h2>unit тести</h2>
+				</section>
+				<section>
+					<h2>дебаг</h2>
+				</section>
+			</section>
+			<section>
+				<section>
+					<img src="img/mem1.jpg" alt="" width="450">
+				</section>
+				<section class="chaos">
+					<span>Теорії категорій</span>
+					<span>Монади</span>
+					<span>Функтори</span>
+					<span>Функціональні структури даних</span>
+					<span>Системи типів</span>
+					<span>Функціональна багатопотоковість</span>
+					<span>Функціональна база даних</span>
+				</section>
+				<section class="qr">
+					<img src="img/qr-code-resources.png" alt="" width="500">
+					<a href="https://github.com/xgrommx/awesome-functional-programming">github.com/xgrommx/awesome-functional-programming</a>
+				</section>
+				<section class="qr">
+					<img src="img/qr-code-slides.png" alt="" width="500">
+					<a href="https://jestersunborn.github.io/functional-programming-js-slides">jestersunborn.github.io/functional-programming-js-slides</a>
 				</section>
 			</section>
 		</div>
@@ -39,7 +110,6 @@
 	<script>
 		Reveal.initialize({
 			history: true,
-
 			dependencies: []
 		});
 	</script>
