--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<section>
 					<p class="backSymb">λ</p>
 					<h4>Let's talk about</h4>
-					<h2>Functional Programming</h2>
+					<h2>FP in JavaScript</h2>
 				</section>
 			</section>
 			<section>
@@ -31,52 +31,63 @@
 				</section>
 			</section>
 			<section>
-				<section>
-					<h3>Історія</h3>
+				<section data-background-color="#191917">
+					<h3 class="white">History</h3>
 				</section>
 				<section>
 					<img src="img/alonzo.jpg" alt="" width="500">
-					<h4>Алонзо Черч</h4>
+					<h4>Alonzo Church</h4>
 					<p>(1903 - 1995)</p>
 				</section>
 				<section>
-					<h3>Лямбда-числення</h3>
+					<h3>Lambda calculus</h3>
 				</section>
 			</section>
 			<section>
-				<section>
-					<h3>Основні принципи ФП</h3>
+				<section data-background-color="#191917">
+					<h3 class="white">Principles of FP</h3>
 				</section>
 				<section>
-					<h3>Чисті функції</h3>
-					<p>Pure Functions</p>
+					<h3>Pure Functions</h3>
+					<h3>🛁</h3>
+				</section>
+				<section data-background-video="./video/demo1.mp4" class="white-text" data-background-video-loop>
+					<h2>Demo</h2>
 				</section>
 				<section>
-					<h3>Функції першого классу та вищого порядку</h3>
-					<p>First-class functions and higher-order functions</p>
+					<h3>First-class functions and higher-order functions</h3>
+					<h3>✈️ 👮🏻</h3>
+				</section>
+				<section data-background-video="./video/demo2.mp4" class="white-text" data-background-video-loop>
+					<h2>Demo</h2>
 				</section>
 				<section>
-					<h3>Незмінність</h3>
-					<p>Imutable</p>
+					<h3>Imutable</h3>
+					<h3>👋🏻🚫</h3>
+				</section>
+				<section data-background-video="./video/demo3.mp4" class="white-text" data-background-video-loop>
+					<h2>Demo</h2>
 				</section>
 				<section>
-					<h3>Каррінг</h3>
-					<p>Currying</p>
+					<h3>Currying</h3>
+					<h3>👨‍👩‍👦 + 🔪 === 🙎🏼‍ + 🤦🏼‍ + 👶🏽</h3>
+				</section>
+				<section data-background-video="./video/demo4.mp4" class="white-text" data-background-video-loop>
+					<h2>Demo</h2>
 				</section>
 			</section>
 			<section>
-				<section>
-					<h2>переваги фп</h2>
-				</section>
-				<section class="quote">
-					<h4>Улучшенное самочувствие. Повышенная самооценка. Иногда раздражительность</h4>
-					<p>(c) Alexey Raspopov, BeerJS Kyiv</p>
+				<section data-background-color="#191917">
+					<h2 class="white">Why FP?</h2>
+					<h2>🤷🏽‍</h2>
 				</section>
 				<section>
-					<h2>unit тести</h2>
+					<h2>Unit tests</h2>
+					<h2>📝</h2>
 				</section>
 				<section>
-					<h2>дебаг</h2>
+					<h2>Debug</h2>
+					<h2>🔎</h2>
 				</section>
 			</section>
 			<section>
@@ -84,17 +95,22 @@
 					<img src="img/mem1.jpg" alt="" width="450">
 				</section>
 				<section class="chaos">
-					<span>Теорії категорій</span>
-					<span>Монади</span>
-					<span>Функтори</span>
-					<span>Функціональні структури даних</span>
-					<span>Системи типів</span>
-					<span>Функціональна багатопотоковість</span>
-					<span>Функціональна база даних</span>
+					<span>Functor</span>
+					<span>Lambda</span>
+					<span>Monad</span>
+					<span>Monoid</span>
+					<span>Lazy evaluation</span>
+					<span>Applicative Functor</span>
+					<span>Type Signatures</span>
+					<span>Algebraic data type</span>
 				</section>
 				<section class="qr">
-					<img src="img/qr-code-resources.png" alt="" width="500">
+					<img src="img/qr-code-resources.png" alt="" width="400">
 					<a href="https://github.com/xgrommx/awesome-functional-programming">github.com/xgrommx/awesome-functional-programming</a>
+				</section>
+				<section class="qr">
+					<img src="img/qr-code-terms.png" alt="" width="400">
+					<a href="https://github.com/hemanth/functional-programming-jargon">github.com/hemanth/functional-programming-jargon</a>
 				</section>
 				<section class="qr">
 					<img src="img/qr-code-slides.png" alt="" width="500">
