Change slide with shit

--- a/index.html
+++ b/index.html
@@ -94,16 +94,7 @@
 				<section>
 					<img src="img/mem1.jpg" alt="" width="450">
 				</section>
-				<section class="chaos">
-					<span>Functor</span>
-					<span>Lambda</span>
-					<span>Monad</span>
-					<span>Monoid</span>
-					<span>Lazy evaluation</span>
-					<span>Applicative Functor</span>
-					<span>Type Signatures</span>
-					<span>Algebraic data type</span>
-				</section>
+				<section class="chaos" data-background-video="./video/last_slide.mp4"></section>
 				<section class="qr">
 					<img src="img/qr-code-resources.png" alt="" width="400">
 					<a href="https://github.com/xgrommx/awesome-functional-programming">github.com/xgrommx/awesome-functional-programming</a>
