Change slides order

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
 					<h3 class="white">Principles of FP</h3>
 				</section>
 				<section>
-					<h3>Pure Functions</h3>
-					<h3>🛁</h3>
+					<h3>Imutable</h3>
+					<h3>👋🏻🚫</h3>
+				</section>
+				<section>
+					<img src="https://staging.prokarma.com/sites/default/files/Man%20with%20Gun.png" alt="">
 				</section>
 				<section data-background-video="./video/demo1.mp4" class="white-text" data-background-video-loop>
 					<h2>Demo</h2>
@@ -58,12 +61,18 @@
 					<h3>First-class functions and higher-order functions</h3>
 					<h3>✈️ 👮🏻</h3>
 				</section>
+				<section>
+					<img src="https://cdn-images-1.medium.com/max/577/1*exgznl7z65gttRxLsMAV2A.png" alt="">
+				</section>
 				<section data-background-video="./video/demo2.mp4" class="white-text" data-background-video-loop>
 					<h2>Demo</h2>
 				</section>
 				<section>
-					<h3>Imutable</h3>
-					<h3>👋🏻🚫</h3>
+					<h3>Pure Functions</h3>
+					<h3>🛁</h3>
+				</section>
+				<section>
+					<img src="https://memegenerator.net/img/instances/500x/43647669/functional-programming-wow-so-pure-such-monads.jpg" alt="">
 				</section>
 				<section data-background-video="./video/demo3.mp4" class="white-text" data-background-video-loop>
 					<h2>Demo</h2>
@@ -82,6 +91,10 @@
 					<h2>🤷🏽‍</h2>
 				</section>
 				<section>
+					<h2>Less pain</h2>
+					<h2>💊 + 😰 === 😝</h2>
+				</section>
+				<section>
 					<h2>Unit tests</h2>
 					<h2>📝</h2>
 				</section>
@@ -91,22 +104,23 @@
 				</section>
 			</section>
 			<section>
+				<section class="chaos" data-background-video="./video/last_slide.mp4"></section>
 				<section>
 					<img src="img/mem1.jpg" alt="" width="450">
-				</section>
-				<section class="chaos" data-background-video="./video/last_slide.mp4"></section>
-				<section class="qr">
-					<img src="img/qr-code-resources.png" alt="" width="400">
-					<a href="https://github.com/xgrommx/awesome-functional-programming">github.com/xgrommx/awesome-functional-programming</a>
 				</section>
 				<section class="qr">
 					<img src="img/qr-code-terms.png" alt="" width="400">
 					<a href="https://github.com/hemanth/functional-programming-jargon">github.com/hemanth/functional-programming-jargon</a>
 				</section>
 				<section class="qr">
+					<img src="img/qr-code-resources.png" alt="" width="400">
+					<a href="https://github.com/xgrommx/awesome-functional-programming">github.com/xgrommx/awesome-functional-programming</a>
+				</section>
+				<section class="qr">
 					<img src="img/qr-code-slides.png" alt="" width="500">
 					<a href="https://jestersunborn.github.io/functional-programming-js-slides">jestersunborn.github.io/functional-programming-js-slides</a>
 				</section>
+				<section data-background-video="https://media.giphy.com/media/5K5ELLZKZfC0g/giphy.mp4" data-background-size="fit"></section>
 			</section>
 		</div>
 	</div>
